[package]
name = "postal"
description = "FFI bindings and safe interface to libpostal"
license = "MIT"
homepage = "https://github.com/pnordahl/rust-postal"
repository = "https://github.com/pnordahl/rust-postal"
version = "0.2.5"
authors = ["Patrick Nordahl <plnordahl@gmail.com>"]
edition = "2021"
build = "build.rs"
links = "libpostal"
readme = "README.md"
keywords = ["libpostal", "postal", "addresses"]

[dev-dependencies]
criterion = "0.2"

[dependencies]
parking_lot = "0.8.0"

[build-dependencies]
bindgen = "0.54"

[[bench]]
name = "benches"
harness = false
